--- a/labSpring/src/main/resources/application.yml
+++ b/labSpring/src/main/resources/application.yml
@@ -1,3 +1,19 @@
 spring:
   application:
     name: labSpring
+  datasource:
+    url: jdbc:postgresql://localhost:5432/mpei
+    username: postgres
+    password: postgres
+    driver-class-name: org.postgresql.Driver
+  jpa:
+    hibernate:
+      ddl-auto: update
+    show-sql: true
+    properties:
+      hibernate:
+        format_sql: true
+    database: postgresql
+
+server:
+  port: 9095
