--- a/labSpring/src/main/resources/application.yml
+++ b/labSpring/src/main/resources/application.yml
@@ -6,14 +6,31 @@ spring:
     username: postgres
     password: postgres
     driver-class-name: org.postgresql.Driver
+    hikari:
+      connection-timeout: 30000
+      maximum-pool-size: 10
   jpa:
     hibernate:
       ddl-auto: update
     show-sql: true
     properties:
       hibernate:
+        dialect: org.hibernate.dialect.PostgreSQLDialect
         format_sql: true
-    database: postgresql
+        jdbc:
+          batch_size: 20
+        use_sql_comments: true
+    defer-datasource-initialization: true
 
+  sql:
+    init:
+      mode: never
+      continue-on-error: false
 server:
   port: 9095
+logging:
+  level:
+    org.hibernate.SQL: DEBUG
+    org.hibernate.type.descriptor.sql.BasicBinder: TRACE
+    org.springframework: INFO
+    com.example.labSpring: DEBUG
